--- a/Frontend/Unus/app/src/main/res/layout/fragment_sign_up_screen.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_sign_up_screen.xml
@@ -7,10 +7,31 @@
     android:background="?attr/backgroundColor"
     >
 
+    <LinearLayout
+
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+
+        >
+
+        <Button
+            android:id="@+id/back_to_login"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:text="back"
+            android:backgroundTint="?attr/buttonTint"
+            android:textColor="?attr/colorSecondary"
+            android:textStyle="bold"
+            />
+
+    </LinearLayout>
     <Space
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.25"
+        android:layout_weight="0.1"
         />
 
     <Space
