--- a/Frontend/Unus/app/src/main/res/layout/fragment_game_lobby.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_game_lobby.xml
@@ -45,6 +45,7 @@
         />
 
     <TextView
+        android:id="@+id/game_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/game_code"
