--- a/Frontend/Unus/app/src/main/res/layout/fragment_game_lobby.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_game_lobby.xml
@@ -12,12 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
+        android:focusable="true"
         >
 
         <ImageView
+            android:id="@+id/leave_lobby"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:src="@drawable/ic_back_button"
+            android:clickable="true"
+            android:focusable="true"
             />
 
         <Space
@@ -27,12 +31,20 @@
             />
 
         <ImageView
+            android:id="@+id/lobby_chat"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:src="@drawable/ic_chat_button"
+            android:clickable="true"
+            android:focusable="true"
             />
 
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        />
 
     <TextView
         android:layout_width="match_parent"
