--- a/Frontend/Unus/app/src/main/res/layout/fragment_join_lobby.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_join_lobby.xml
@@ -5,9 +5,33 @@
     android:layout_height="match_parent"
     tools:context=".JoinLobbyFragment"
     android:background="?attr/backgroundColor"
-    android:paddingHorizontal="50dp"
+    android:paddingHorizontal="10dp"
     android:orientation="vertical"
     >
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:focusable="true"
+        >
+
+        <ImageView
+            android:id="@+id/leave_join_lobby"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_back_button"
+            android:clickable="true"
+            android:focusable="true"
+            />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
