--- a/Frontend/Unus/app/src/main/res/layout/booted_popup.xml
+++ b/Frontend/Unus/app/src/main/res/layout/booted_popup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="300dp"
     android:paddingLeft="10dp"
@@ -12,17 +13,17 @@
     >
 
     <TextView
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="10dp"
         android:text="@string/booted"
         android:textAlignment="center"
+        android:textColor="@color/purple_500"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:padding="10dp"
-        android:textColor="@color/purple_500"
-        android:gravity="center"
-        />
+        tools:ignore="TextContrastCheck" />
 
 
 </LinearLayout>
