--- a/Frontend/Unus/app/src/main/res/layout/fragment_game_two_player.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_game_two_player.xml
@@ -6,6 +6,37 @@
     android:background="?attr/backgroundColor"
     >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        >
+
+        <ImageView
+            android:id="@+id/game_menu"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_pause_button"
+            android:clickable="true"
+            android:focusable="true"
+            />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:id="@+id/game_chat"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_chat_button"
+            android:clickable="true"
+            android:focusable="true"
+            />
+
+    </LinearLayout>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="200dp"
