--- a/Frontend/Unus/app/src/main/res/layout/admin_user_popup.xml
+++ b/Frontend/Unus/app/src/main/res/layout/admin_user_popup.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
-    android:layout_height="400dp"
+    android:layout_height="450dp"
     android:gravity="center"
     android:background="@color/dark_gray">
 
@@ -108,6 +108,13 @@
             android:layout_gravity="center"
             android:text="@string/change"
             android:id="@+id/change"
+            />
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:text="@string/promote"
+            android:id="@+id/promote"
             />
 
 
