--- a/Frontend/Unus/app/src/main/res/layout/fragment_admin_page.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_admin_page.xml
@@ -44,6 +44,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="@string/admin_users"
+                android:id="@+id/users"
                 android:backgroundTint="?attr/buttonTint"
                 android:textColor="?attr/colorSecondary"
                 />
@@ -53,6 +54,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="@string/admin_lobbies"
+                android:id="@+id/lobbies"
                 android:backgroundTint="?attr/colorSecondary"
                 android:textColor="?attr/buttonTint"
                 />
@@ -64,7 +66,7 @@
             >
 
             <EditText
-                android:layout_width="150dp"
+                android:layout_width="160dp"
                 android:layout_height="50dp"
                 android:id="@+id/searchbar"
                 android:hint="@string/searchid"
@@ -85,7 +87,7 @@
                 />
             <Button
                 android:id="@+id/search_button"
-                android:layout_width="100dp"
+                android:layout_width="95dp"
                 android:layout_height="50dp"
                 android:text="@string/search"
                 android:backgroundTint="?attr/buttonTint"
